--- a/_posts/0000-01-02-jdongNYL.md
+++ b/_posts/0000-01-02-jdongNYL.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to JD's updated slide!"
 ---
 This is JD's slide
 Use the left arrow to go back!
