--- a/_posts/0000-01-02-jdongNYL.md
+++ b/_posts/0000-01-02-jdongNYL.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to JD's updated slide!"
 ---
-This is JD's slide
+This is updated slide by JD!!
 Use the left arrow to go back!
