make Line 5 more awesome

--- a/_posts/0000-01-02-jdongNYL.md
+++ b/_posts/0000-01-02-jdongNYL.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to JD's updated slide!"
 ---
-This is updated slide by JD!!
+This is updated slide by JD : tada :
 Use the left arrow to go back!
